--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-session": "^1.17.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.15",
     "nodemon": "^2.0.7",
     "superagent": "^6.1.0"
   }
